# PythonHomeWork

./: .gitignore  README.md  pyproject.toml
task2/: bowling.py  test_bowling.py
task3/: gilded_rose.py  test_gilded_rose.py
task4/: app.py
task4/instance/: todos.db
task4/static/: script.js  style.css
task4/templates/: index.html
task5/: mnist_train.py
