[tool.poetry]
name = "pythonproject2"
version = "0.1.0"
description = ""
authors = ["Ao Yu (Anthony)"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.1"
flask-cors = "^6.0.0"
tensorflow = "^2.19.0"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
